--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             font-family: 'Playfair Display', serif;
         }
         .glass {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.02);
+            backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.05);
         }
         .gold-gradient {
@@ -29,18 +29,19 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-        .spline-container iframe {
-            pointer-events: none;
-        }
+        /* Custom scrollbar for premium feel */
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
         ::-webkit-scrollbar-track {
             background: #050505;
         }
         ::-webkit-scrollbar-thumb {
-            background: #222;
-            border-radius: 4px;
+            background: #1a1a1a;
+            border-radius: 10px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #D4AF37;
         }
     </style>
 <script type="importmap">
